--- a/bin/dune
+++ b/bin/dune
@@ -1,6 +1,6 @@
 (executable
  (public_name slurmgen)
  (name main)
- (libraries base sexplib stdio)
+ (libraries base sexplib stdio cmdliner)
  (preprocess
   (pps ppx_sexp_conv)))
